# gundi

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
src/: blame.rs  cli.rs  filter.rs  main.rs  output.rs  scanner.rs  types.rs
tests/: integration.rs
