[package]
name = "gundi"
version = "0.1.0"
edition = "2024"
description = "Unearth your forgotten code debt — TODO scanner with git blame age tracking"
license = "MIT"
repository = "https://github.com/hyperb1iss/gundi"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
ignore = "0.4"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
